V.Next
----------

V.16.1.0
----------
- [MINOR] Handle crypto error gracefully (#2190)
- [MINOR] Stop logging thread name (#2185)
- [MINOR] Adding Moshi, and WebAuthnJsonUtil (#2189)

V.16.0.1
----------
- [MINOR] Add LTW as prod broker app (#2179)

V.16.0.0
----------
- [MINOR] Add MsaGrantedRefreshTokenNotSupportedOnAadTenant error code to ServiceException (#2165)
- [MAJOR] Separate Broker API and Client SDK Active Broker caches (#2164)
- [MINOR] Deprecate Common logger wrapper (#2157)
- [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
- [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
- [MAJOR] Update active broker cache upon returned result (#2140)
- [MINOR] Update TokenRequest.java with NAA params (#2143)
- [MAJOR] handle broker discovery disabled on SDK side (#2145)
- [MINOR] Refactored OneAuthTestApp infra in order to process LTW test cases (#2136)
- [MINOR] Add checkMode method to msaltestapp infra (#2141)
- [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
- [MINOR] Add new apk name to BrokerHost infra (#2152)
- [MINOR] Send key to request broker data in all BrokerOperationBundle (#2159)
- [MINOR] Catch strongbox exception on Android 14 (#2158)
- [MINOR] Nested app auth implementation (#2168)

V.15.0.0
----------
- [MAJOR] Move Broker side active broker cache to broker repo (#2123)
- [MINOR] Add span names for the BrokerOperationRequestDispatcher and PassthroughExecutor (#2100)
- [PATCH] Add key derivation method that takes SecretKey object as argument (#2113)
- [MAJOR] AccountManagerStorageHelper should not force cast IBrokerAccount into AndroidBrokerAccount (#2110) (Breaking change to Broker only)
- [MAJOR] Tidy up BrokerValidator (#2107)
- [PATCH] Adding null checks for CancelHelper (CBA) (#2105)